只支持http方式访问

--- a/webapp/WEB-INF/cas.properties
+++ b/webapp/WEB-INF/cas.properties
@@ -103,3 +103,37 @@ host.name=cas01.example.org
 # log4j.refresh.interval=60000
 
 
+#============================#
+#===== Database sttings =====#
+#============================#
+
+
+#mysql database setting
+jdbc.type=mysql
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://172.28.83.251:3306/jeesite?useUnicode=true&characterEncoding=utf-8
+jdbc.username=root
+jdbc.password=6e5fa130cd
+
+
+#pool settings
+jdbc.pool.init=1
+jdbc.pool.minIdle=3
+jdbc.pool.maxActive=20
+
+#jdbc.testSql=SELECT 'x'
+jdbc.testSql=SELECT 'x' FROM DUAL
+
+#redis settings
+redis.keyPrefix=jeesite
+redis.host=127.0.0.1
+redis.port=6379
+
+#============================#
+#===== System settings ======#
+#============================#
+
+
+
+
+
