增加注册相关功能

--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -214,6 +214,11 @@
     <session-timeout>5</session-timeout>
   </session-config>
 
+	<servlet-mapping>
+		<servlet-name>cas</servlet-name>
+		<url-pattern>/registerLogin</url-pattern>
+	</servlet-mapping>
+
   <error-page>
     <exception-type>org.springframework.context.ApplicationContextException</exception-type>
     <location>/WEB-INF/view/jsp/brokenContext.jsp</location>
