--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -219,6 +219,11 @@
 		<url-pattern>/registerLogin</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping>
+		<servlet-name>cas</servlet-name>
+		<url-pattern>/register</url-pattern>
+	</servlet-mapping>
+
   <error-page>
     <exception-type>org.springframework.context.ApplicationContextException</exception-type>
     <location>/WEB-INF/view/jsp/brokenContext.jsp</location>
