增加springbcontextHelper帮助类

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,5 @@ encoding//webapp/WEB-INF/view/jsp/default/ui/casLoginView.jsp=UTF-8
 encoding//webapp/WEB-INF/view/jsp/default/ui/casLoginView1.jsp=UTF-8
 encoding//webapp/WEB-INF/view/jsp/default/ui/casRegisterView.jsp=UTF-8
 encoding//webapp/WEB-INF/view/jsp/default/ui/includes/bottom.jsp=UTF-8
+encoding//webapp/WEB-INF/view/jsp/default/ui/includes/content.jsp=UTF-8
 encoding//webapp/WEB-INF/view/jsp/protocol/2.0/casServiceValidationSuccess.jsp=UTF-8
